# VerifyBot

./: .gitignore  .gitmodules  CMakeLists.txt  CommandResult.cs  Commands.cs  Constants.cs  Dockerfile  EPIC_STEPS.md  EventSystem.cs  FilterSystem.cs  Program.cs  README.md  VerifyBot.csproj  VerifyBot.sln  botcommandhandler.cpp  botcommandhandler.h  botconfig.cpp  botconfig.h  botutil.cpp  botutil.h  commands.cpp  commands.h  constants.h  docker-compose.yaml  main.cpp  verification.cpp  verification.h
Common/: GlobalUsings.cs
VerifyBot/: Commands.cs  EventSystem.cs  Program.cs  VerifyBot.csproj
VerifyBot/Common/: GlobalUsings.cs
